[package]
name = "beep-proto"
version = "0.0.1"
authors = ["Matthias Wimmer <m@tthias.eu>"]
homepage = "https://github.com/mawis"
license = "LGPL-2.1-only"
description = "Limited support for the BEEP protocol (RFC 3080/RFC 3081)"

[dependencies]
log = "0.4.6"
libc = "0.2.45"

[build-dependencies]
cmake = "0.1"
